--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -166,3 +166,10 @@
   url = {https://resources.nvidia.com/en-us-briefcase-for-datasheets/rtx-4000-ada-datashe-1?ncid=no-ncid},
   note = {Official datasheet for the RTX 4000 Ada}
 }
+@misc{amd_gpu_basics,
+  author = {Oak Ridge National Laboratory},
+  title = {AMD GPU Basics},
+  year = {2019},
+  url = {https://www.olcf.ornl.gov/wp-content/uploads/2019/10/ORNL_Application_Readiness_Workshop-AMD_GPU_Basics.pdf},
+  note = {Workshop slides covering AMD GPU architecture and programming fundamentals.}
+}
